--- a/src/app/eventos-show/eventos-show.component.html
+++ b/src/app/eventos-show/eventos-show.component.html
@@ -1,22 +1,62 @@
+<nav class="navbar navbar-light bg-light justify-content-between mt-3">
+    <ul class="nav nav-pills">
+        <li class="nav-item">
+            <a class="nav-link" href="#" (click)="orderDate()">Orden por fecha</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#" (click)="orderPrice()">Orden por precio</a>
+        </li>
+    </ul>
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="text" [(ngModel)]="search" name="search" placeholder="Search" aria-label="Search">
+    </form>
+</nav>
 
 <div class="card-columns mt-4">
     <div class="container">
         <div class="row" *ngIf="eventos && eventos.length > 0">
-            <div class = "col-md-6" *ngFor="let eve of eventos">
+            <div class="col-md-6" *ngFor="let eve of eventos | eventoFilter:search">
                 <div class="card">
+                    <img [src]="eve.image" class="card-img-top" alt="" [title]="eve.description" />
                     <div class="card-body">
                         <h4 class="card-title">{{eve.title}}</h4>
                         <p class="card-text">{{eve.description}}</p>
                     </div>
                     <div class="card-footer text-muted">
-                        {{eve.date}}
-                        <span class="float-right">{{eve.price}}€</span>
+                        {{eve.date | date:'dd/MM/y'}}
+                        <span class="float-right">{{eve.price | currency:'EUR':'symbol'}}</span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<!--
+<form class="mt-4" (ngSubmit)="addEvento()">
+    <div class="form-group">
+        <label for="name">Nombre</label>
+        <input type="text" class="form-control" name="title" [(ngModel)]="newEvento.title" placeholder="Enter name">
+    </div>
+    <div class="form-group">
+        <label for="date">Fecha</label>
+        <input type="date" class="form-control" name="date">
+    </div>
+    <div class="form-group">
+        <label for="description">Descripción</label>
+        <textarea class="form-control" name="description" rows="3"></textarea>
+    </div>
+    <div class="form-group">
+        <label for="price">Precio</label>
+        <input type="number" class="form-control" name="price" min="0.00" max="10000.00" step="0.01" />
+    </div>
+    <div class="form-group">
+        <label for="image">Imagen</label>
+        <input type="file" class="form-control" name="image" #fileImage (change)="changeImage(fileImage)">
+    </div>
+    <img [src]="newEvento.image" alt="" class="img-thumbnail">
+    <button type="submit" class="btn btn-primary">Create</button>
+</form>
+-->
 
 <!--
 <div class="row" *ngIf="eventos.length <= 0">
