--- a/src/app/eventos-show/eventos-show.component.html
+++ b/src/app/eventos-show/eventos-show.component.html
@@ -20,7 +20,7 @@
                     <img [src]="eve.image" class="card-img-top" alt="" [title]="eve.description" />
                     <div class="card-body">
                         <h4 class="card-title">{{eve.title}}</h4>
-                        <p class="card-text">{{eve.description}}</p>
+                        <p class="card-text" [innerText]="eve.description">{{eve.description}}</p>
                     </div>
                     <div class="card-footer text-muted">
                         {{eve.date | date:'dd/MM/y'}}
@@ -31,7 +31,7 @@
         </div>
     </div>
 </div>
-<!--
+
 <form class="mt-4" (ngSubmit)="addEvento()">
     <div class="form-group">
         <label for="name">Nombre</label>
@@ -39,24 +39,24 @@
     </div>
     <div class="form-group">
         <label for="date">Fecha</label>
-        <input type="date" class="form-control" name="date">
+        <input type="date" class="form-control" name="date" [(ngModel)]="newEvento.date">
     </div>
     <div class="form-group">
         <label for="description">Descripción</label>
-        <textarea class="form-control" name="description" rows="3"></textarea>
+        <textarea class="form-control" name="description" rows="3" [(ngModel)]="newEvento.description" placeholder="Enter description"></textarea>
     </div>
     <div class="form-group">
         <label for="price">Precio</label>
-        <input type="number" class="form-control" name="price" min="0.00" max="10000.00" step="0.01" />
+        <input type="number" class="form-control" name="price" min="0.00" max="10000.00" step="0.01" [(ngModel)]="newEvento.price"/>
     </div>
     <div class="form-group">
         <label for="image">Imagen</label>
-        <input type="file" class="form-control" name="image" #fileImage (change)="changeImage(fileImage)">
+        <input type="file" class="form-control" name="image" #fileImage (change)="changeImage(fileImage)" [(ngModel)]="newEvento.image">
     </div>
     <img [src]="newEvento.image" alt="" class="img-thumbnail">
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
--->
+
 
 <!--
 <div class="row" *ngIf="eventos.length <= 0">
