--- a/src/app/eventos-show/eventos-show.component.html
+++ b/src/app/eventos-show/eventos-show.component.html
@@ -32,24 +32,24 @@
     </div>
 </div>
 
-<form class="mt-4" (ngSubmit)="addEvento()">
-    <div class="form-group">
+<form class="mt-4 mb-4" (ngSubmit)="addEvento()">
+    <div class="form-group p-2">
         <label for="name">Nombre</label>
         <input type="text" class="form-control" name="title" [(ngModel)]="newEvento.title" placeholder="Enter name">
     </div>
-    <div class="form-group">
+    <div class="form-group p-2">
         <label for="date">Fecha</label>
         <input type="date" class="form-control" name="date" [(ngModel)]="newEvento.date">
     </div>
-    <div class="form-group">
+    <div class="form-group p-2">
         <label for="description">Descripción</label>
         <textarea class="form-control" name="description" rows="3" [(ngModel)]="newEvento.description" placeholder="Enter description"></textarea>
     </div>
-    <div class="form-group">
+    <div class="form-group p-2">
         <label for="price">Precio</label>
         <input type="number" class="form-control" name="price" min="0.00" max="10000.00" step="0.01" [(ngModel)]="newEvento.price"/>
     </div>
-    <div class="form-group">
+    <div class="form-group p-2">
         <label for="image">Imagen</label>
         <input type="file" class="form-control" name="image" #fileImage (change)="changeImage(fileImage)" [(ngModel)]="newEvento.image">
     </div>
